Fix CSS tic tac toe overflow w/ position:relative

--- a/src/css-tic-tac-toe/style.styl
+++ b/src/css-tic-tac-toe/style.styl
@@ -9,6 +9,7 @@ $size = 300px
 $animDuration = .5s
 
 body
+html
   align-items center
   background-color $bg
   color #fafafa
@@ -17,7 +18,9 @@ body
   font-family 'Arial', sans-serif
   justify-content center
   height 100vh
+  width 100vw
   overflow hidden
+  position relative
 
 svg
   height ($size / 3)
